completed bob exercise