@@ -7,14 +7,19 @@ public class Bob {
         System.out.println("What would you like to say to Bob? :)");
         String userInput = scanner.nextLine();
 
-        if (userInput.trim().toLowerCase().endsWith("?")) {
-            System.out.println("Sure.");
-        } else if (userInput.trim().toLowerCase().endsWith("!")) {
-            System.out.println("Whoa, chill out!");
-        } else if (userInput.trim().isEmpty()) {
-            System.out.println("Fine. Be that way!");
-        } else {
-            System.out.println("Whatever.");
+        while (!userInput.isBlank()) {
+            if (userInput.trim().toLowerCase().endsWith("?")) {
+                System.out.println("Sure.");
+            } else if (userInput.trim().toLowerCase().endsWith("!")) {
+                System.out.println("Whoa, chill out!");
+            } else if (userInput.isBlank()) {
+                System.out.println("Fine. Be that way!"); // doesn't come back around?? to fix
+                break;
+            } else {
+                System.out.println("Whatever.");
+            }
+            userInput = scanner.nextLine();
         }
+
     }
 }
